# vintage-LLM

./: .gitignore  LICENSE  README.md  pyproject.toml
bench/: math.py
dataset/: __main__.py  config.py  count.ts  delete.ts  explore.py  export.py  export.ts  fields.py  import.ts  index.py  main.py  package.json  query.py  query.ts  report.py  stats.py  stats.ts  vocab.json
dataset2/: delete.ts  export.ts  import.ts  indexing.ts  package.json  query.ts  stats.ts  test_me.jsonl
dataset3/: delete.ts  import.ts  query.ts  stats.ts
knowledge/: README.md  authors.json  base_knowledge.py  books.py  gen_base_knowledge.py  gen_chat.py  gen_knowledge.py  gen_victorian_qa.py  math_qa.py  medieval_qa.py  memory.py  quotes.py
knowledge/bible/: bible1611 Gemini-3.5-Flash.json  bible1611 by Deepseek-v4-Pro.json  bible1611 by Kimi-2.6.json  bible1611 scores.json  bible1611_summary.json  bible1611_verses.json  bible_lookup.py  generate_summary.py  generate_verse.py
knowledge/books/: Advanced question book 1883.json  Advanced question book 1883.txt  Common school examiner and review 1890-qa.json  Common school examiner and review 1890.txt  Complete dictionary of Synonyms and Antonyms 1898.json  Dictionary of English etymology 1872.txt  How to study Literature 1871.txt  New common school question book 1888.json  New common school question book 1888.txt  New common school question book 1900.json  New common school question book 1900.txt  Recreations in the common school studies 1885-qa.json  Recreations in the common school studies 1885.txt  School Room Search Light 1895-qa.json  School Room Search Light 1895.txt  Virtues and their Reasons 1888.txt  exam.py  exam_sessions.json  exam_sessions.jsonl
scripts/: add_bos_eos.py  count_bin_tokens.py  count_text_tokens.py  count_tokens.py  decode_arrow_chunk.py  decode_bin_chunk.py  dedupe_dataset.py  download_docs.py  download_poetry.py  export_parquet_cols.py  export_xxh64_text_pq.py  fine_tune_fix.py  gpu_info.py  index_lance.py  index_texts.py  index_zvec.py  ingest_dedup.py  internet_archive_meta.py  llm_api_gen.py  llm_correct_jsonl.py  llm_correct_text.py  llm_duo_chat.py  merge_lance.py  plot_lengths.py  prepare_train_valid.py  process_ebook.py  process_ia_ebook.py  qdrant_text.py  quality_scores.py  query_index.py  tokenize_folder.py  tokenize_parquet_folder.py
tokenizer/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
training/: README.md  base_train.py  config.toml  doctor.py  fine_tune.py  fine_tune_config.toml  generate.py  prepare_dataset.py  split_dataset.py  tokenize_dataset.py  vibe_check.py
(+80 files in other folders)
