[project]
name = "vintage-LLM"
version = "0.1.0"
description = "Vintage-LLM is a small LLM trained exclusively on old books"
authors = [
    { name = "Cristi Constantin" }
]
readme = "README.md"
license = {text = "MIT"}

requires-python = ">= 3.13.9, <3.15"

dependencies = [
    "accelerate>=1.13",
    "datasets>=4.8.0",
    "datasketch>=1.10",
    "huggingface-hub>=1.10",
    "litdata>=0.2",
    "litgpt",
    "orjson>=3.11",
    "qdrant-client>=1.12",
    "redis>=5.0",
    "sentence-transformers>=5.4",
    "tokenizers>=0.22",
    "torch>=2.10",
    "transformers>=5.5",
]

[project.urls]
Homepage = "https://github.com/croqaz/vintage-LLM"
Repository = "https://github.com/croqaz/vintage-LLM"
Documentation = "https://github.com/croqaz/"
Issues = "https://github.com/croqaz/vintage-LLM/issues"

[dependency-groups]
dev = [
    "hatch ~= 1.16",
    "ruff ~= 0.15",
    "ipython ~= 9.12",
]

[tool.ruff]
line-length = 140

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "SIM", # flake8-simplify
    "RUF100", # unused-noqa
]
ignore = ["E731", "SIM109", "C901"]

[tool.ruff.lint.per-file-ignores]
"imgdb/__init__.py" = ["F"]
